# rust-multi-tenant-auth-template

./: .env.example  Cargo.toml  LICENSE  README.md  TENANT_ISOLATION.md  docker-compose.yml
.github/workflows/: ci.yml
.sisyphus/notepads/task-10/: decisions.md  issues.md  learnings.md
docker/: Dockerfile
migrations/: 202604260001_initial_auth_and_tenants.sql  202604260002_add_token_tables.sql  202604260003_add_rbac_tables.sql
migrations/tenant/: 202604260001_tenant_schema_base.sql
src/: config.rs  errors.rs  mailer.rs  main.rs  response.rs  state.rs
src/middleware/: auth.rs  tenant.rs
src/models/: mod.rs  permission.rs  refresh_token.rs  role.rs  tenant.rs  tenant_invitation.rs  tenant_member.rs  user.rs  user_role.rs
src/routes/: admin.rs  auth.rs  health.rs  mod.rs  tenant.rs
src/services/: auth.rs  mod.rs  tenant.rs  token.rs
static/: openapi.json  swagger.html
tests/: test_api.sh
